5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1712_2508.log
== TEST (2019-05-14 22:35:13) 
-- CODE:
n = int(inout("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2)))
	s = s * (-1)
	cont = cont + 1
print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(inout("numero de termos:"))
NameError: name 'inout' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:35:21) 
-- CODE:
n = int(input("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2)))
	s = s * (-1)
	cont = cont + 1
print(acum)
-- OUTPUT:
0.16666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:35:46) 
-- CODE:
n = int(input("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + p + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2)))
	s = s * (-1)
	cont = cont + 1
print(acum)
-- OUTPUT:
15.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:36:45) 
-- CODE:
n = int(input("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + p + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2))) * s
	s = s * (-1)
	cont = cont + 1
print(acum)
-- OUTPUT:
15.033333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:37:15) 
-- CODE:
n = int(input("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + p + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2))) * s
	s = s * (-1)
	cont = cont + 1
print(round(acum , 8)
-- ERROR:
File "XXXX", line 15
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:37:20) 
-- CODE:
n = int(input("numero de termos:"))
n1 = 2
n2 = 3
n3 = 4

acum = 0 
cont = 0
s = 1
p = 3
while (cont < n):
	acum = acum + p + (4 / ((n1 + 2)*(n2 + 2)*(n3 + 2))) * s
	s = s * (-1)
	cont = cont + 1
print(round(acum , 8)
-- ERROR:
File "XXXX", line 15
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:40:00) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:40:14) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
	
print(round(acum , 8)
-- ERROR:
File "XXXX", line 15
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:40:16) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
	
print(round(acum , 8)
-- EXECUTION TIME:
0.136797
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 15
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:40:43) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.187786
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
0.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
0.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:40:45) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.164825
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
0.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
0.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
0.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:40:45) 
-- CODE:
n = int(input("numero de termos:"))

acum = 0 
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:41:25) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:53) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.192364
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.155541
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14271284
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.172167
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:54) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.204309
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14157215
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.414117
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14162381
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.767303
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.922908
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.759893
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
numero de termos:3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.845161
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14162381
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14162381
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:55) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
1.00861
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
numero de termos:3.14157215
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:56) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.589899
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14162381
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14157215
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.171077
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.265857
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.669814
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.660993
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14157215
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.777284
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:57) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.541044
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14162381
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
numero de termos:3.14271284
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:58) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.206478
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
numero de termos:3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
numero de termos:3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
numero de termos:3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:58) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.277718
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:58) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.40824
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
numero de termos:3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
numero de termos:3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
numero de termos:3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:41:58) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 0
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.479892
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
numero de termos:3.14157215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
numero de termos:3.14162381
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:42:19) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 1
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:42:21) 
-- CODE:
n = int(input("numero de termos:"))

acum = 3
cont = 1
s = 1
a = 2

while (cont < n):
	acum = acum + (4 / (a * (a + 1) * (a + 2))) * s 
	s = s * (-1)
	a = a + 2
	cont = cont + 1
print(round(acum , 8))
-- EXECUTION TIME:
0.165503
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
